@@ -9,6 +9,9 @@ unity (7.4.0+16.04.20160801.2-0ubuntu2) UNRELEASED; urgency=medium
     #1605180)
   * DecoratedWindow: display unmaximize button if the window is
     vertically or horizontally maximized (LP: #1608480)
+  * Make sure the switcher detail view is properly scaled. Also scale
+    the xy_offset to make sure the switcher and launcher do not overlap.
+    (LP: #1605256)
 
   [ Marco Trevisan (Treviño) ]
   * DecoratedWindow: avoid deferencing an invalid shadow texture ptr,
